--- a/shopping_assistant.ipynb
+++ b/shopping_assistant.ipynb
@@ -17,7 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "openai.api_key = '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'"
+    "openai.api_key = ""
    ]
   },
   {
