--- a/lit_review.ipynb
+++ b/lit_review.ipynb
@@ -18,7 +18,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "openai.api_key = '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'"
+    "openai.api_key = 'YOUR API KEY'"
    ]
   },
   {
